--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "DefinitelyTyped",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "homepage": "https://github.com/borisyankov/DefinitelyTyped",
   "repository": {
     "type": "git",
@@ -32,8 +32,7 @@
     "refmap": "./node_modules/.bin/dt --dry --print-refmap",
     "help": "./node_modules/.bin/dt -h"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "definition-tester": "0.2.0",
     "typescript": "1.4.1"
